--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -39,7 +39,7 @@ jobs:
           echo "[Error] Due to a change in the workflow file of the upstream repository, GitHub has automatically suspended the scheduled automatic update. You need to manually sync your fork. Please refer to the detailed tutorial for instructions: https://github.com/Yidadaa/ChatGPT-Next-Web#enable-automatic-updates"
           exit 1
       - name: Sync ok
-        if: ! failure()
+        if: failure() != true
         run: |
           echo "[Notice] 更新成功！"
           echo "[Notice] Update succeed! "
